@@ -1,3 +1,7 @@
+2003-09-14	ujwal
+
+    * Fixed a bunch of bugs that prevented scripting from working.
+
 2003-09-13	ujwal
 
     * Moved more session-specific code to from PseudoTerminal to PTYSession. 
